--- a/main.html
+++ b/main.html
@@ -8,7 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div class="quote-display">
+  <p id="quoteText"></p>
+</div>
+
+<input type="text" id="quoteInput" placeholder="Start typing..." />
+
+<p class="timer">Time: <span id="timerText">0</span>s</p>
+<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
