--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 
 <input type="text" id="quoteInput" placeholder="Start typing..." />
 
-<p class="timer">Time: <span id="timerText">0</span>s</p>
+<p class="timer"><span id="timerText">0</span></p>
 <script type="text/javascript" src="./script.js">
 </script>
 
